--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ endpoints:
         - key: "Content-Type"
           value: "application/json"
         - key: "Authorization"
-          value: "Bearer 1234567890"
+          value: "Bearer ${AUTH_TOKEN}"
   - name: "todos-post"
     path: "/todos"
     method: "POST"
@@ -18,7 +18,7 @@ endpoints:
         - key: "Content-Type"
           value: "application/json"
         - key: "Authorization"
-          value: "Bearer 1234567890"
+          value: "Bearer ${AUTH_TOKEN}"
   - name: "posts"
     path: "/posts"
     method: "GET"
