--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "http-proxy-middleware": "^2.0.6",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prettier": "3.2.5",
