--- a/config.yml
+++ b/config.yml
@@ -19,8 +19,21 @@ endpoints:
           value: "application/json"
         - key: "Authorization"
           value: "Bearer ${AUTH_TOKEN}"
-  - name: "posts"
-    path: "/posts"
+  - name: "giphy trending"
+    path: "/giphy/trending"
     method: "GET"
     destination:
-      url: "https://jsonplaceholder.typicode.com/posts"
+      url: "https://api.giphy.com/v1/gifs/trending"
+      params:
+        - key: "api_key"
+          value: "${GIPHY_API_KEY}"
+        - key: "limit"
+          value: "1"
+  - name: "spotify artist"
+    path: "/spotify/artist"
+    method: "GET"
+    destination:
+      url: "https://api.spotify.com/v1/artists/4Z8W4fKeB5YxbusRsdQVPb"
+      headers:
+        - key: "Authorization"
+          value: "Bearer ${SPOTIFY_API_KEY}"
