--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
+    "build": "tsc",
+    "start": "node ./dist/index.js",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +28,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "http-proxy-middleware": "^2.0.6",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prettier": "3.2.5",
