--- a/package.json
+++ b/package.json
@@ -4,36 +4,35 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon ./src/index.ts",
-    "build": "tsc",
-    "start": "node ./dist/index.js",
-    "test": "jest",
-    "lint": "eslint .",
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "test": "turbo test",
+    "test:watch": "turbo run test:watch",
+    "lint": "turbo lint",
+    "clean": "turbo clean",
     "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ajv": "^8.12.0",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "yaml": "^2.3.4"
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "http-proxy-middleware": "^2.0.6",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.3",
     "prettier": "3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "turbo": "^1.12.4",
     "typescript": "^5.3.3"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
