--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "@endpointly/server",
+  "name": "@endpointly/policies",
   "version": "0.0.0",
   "description": "",
   "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
-    "dev": "nodemon ./src/index.ts",
-    "build": "tsc",
-    "start": "node ./dist/index.js",
+    "build": "tsc -d",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint .",
@@ -16,15 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.12.0",
-    "express": "^4.18.2",
-    "yaml": "^2.3.4"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "@endpointly/tsconfig": "*",
     "@endpointly/eslint-config": "*",
-    "@endpointly/policies": "*",
-    "@types/express": "^4.17.21",
-    "http-proxy-middleware": "^2.0.6",
-    "nodemon": "^3.0.3"
+    "@endpointly/tsconfig": "*",
+    "@types/cors": "^2.8.17"
   }
 }
