--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -6,7 +6,7 @@
   "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "tsc -d",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "lint": "eslint .",
     "clean": "rimraf ./dist"
