add cors middleware

--- a/packages/server/config.yml
+++ b/packages/server/config.yml
@@ -37,3 +37,6 @@ endpoints:
       headers:
         - key: "Authorization"
           value: "Bearer ${SPOTIFY_TOKEN}"
+policies:
+  cors:
+    origin: "*"
