--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -16,7 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.12.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express-jwt": "^8.4.1"
   },
   "devDependencies": {
     "@endpointly/eslint-config": "*",
