--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,16 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@endpointly/policies": "*",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "express": "^4.18.2",
-    "yaml": "^2.3.4"
+    "yaml": "^2.3.4",
+    "http-proxy-middleware": "^2.0.6"
   },
   "devDependencies": {
     "@endpointly/eslint-config": "*",
-    "@endpointly/policies": "*",
     "@endpointly/tsconfig": "*",
-    "@types/express": "^4.17.21",
-    "http-proxy-middleware": "^2.0.6"
+    "@types/express": "^4.17.21"
   }
 }
