--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
+  "bin": {
+    "endpointly": "dist/src/index.js"
+  },
   "scripts": {
     "build": "tsc -d",
     "build:watch": "tsc -w -d"
