--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
     "prettier": "3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
