--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -19,6 +19,7 @@
     "ajv": "^8.12.0",
     "cors": "^2.8.5",
     "express-jwt": "^8.4.1",
+    "express-rate-limit": "^7.1.5",
     "jwks-rsa": "^3.1.0"
   },
   "devDependencies": {
