add rate limit identifier

--- a/config.yml
+++ b/config.yml
@@ -38,4 +38,5 @@ endpoints:
         - key: "Authorization"
           value: "Bearer ${SPOTIFY_TOKEN}"
 policies:
-  rateLimit: {}
+  rateLimit:
+    identifier: "api-key"
