rename identifier to rate limit by

--- a/config.yml
+++ b/config.yml
@@ -39,4 +39,4 @@ endpoints:
           value: "Bearer ${SPOTIFY_TOKEN}"
 policies:
   rateLimit:
-    identifier: "api-key"
+    rateLimitBy: "api-key"
