--- a/config.yml
+++ b/config.yml
@@ -38,5 +38,8 @@ endpoints:
         - key: "Authorization"
           value: "Bearer ${SPOTIFY_TOKEN}"
 policies:
+  apiKey:
+    apiKeyHashes:
+      - "123"
   rateLimit:
     rateLimitBy: "api-key"
