update validate config tests

--- a/config.yml
+++ b/config.yml
@@ -38,8 +38,4 @@ endpoints:
         - key: "Authorization"
           value: "Bearer ${SPOTIFY_TOKEN}"
 policies:
-  apiKey:
-    apiKeyHashes:
-      - "123"
-  rateLimit:
-    rateLimitBy: "api-key"
+  rateLimit: {}
