exclude tests from tsc build

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "build": "tsc -d",
-    "build:watch": "tsc -w -d"
+    "build:watch": "tsc -w -d",
+    "lint": "eslint .",
+    "clean": "rimraf ./dist"
   },
   "author": "",
   "license": "ISC",
