--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,5 +4,6 @@
     "outDir": "./dist",
     "rootDir": "."
   },
-  "include": ["./package.json", "./src/**/*"]
+  "include": ["./package.json", "./src/**/*.ts"],
+  "exclude": ["**/*.test.ts", "dist"]
 }
