--- a/config.yml
+++ b/config.yml
@@ -8,8 +8,7 @@ policyDefinitions:
   #     - "HS256"
 
 endpoints:
-  - name: "todos-get"
-    path: "/todos"
+  - path: "/todos"
     method: "GET"
     destination:
       url: "https://jsonplaceholder.typicode.com/todos"
@@ -19,8 +18,7 @@ endpoints:
     policies:
       - cors
       - rateLimit
-  - name: "todos-post"
-    path: "/todos"
+  - path: "/todos"
     method: "POST"
     destination:
       url: "https://jsonplaceholder.typicode.com/todos"
@@ -29,8 +27,7 @@ endpoints:
           value: "application/json"
         - key: "Authorization"
           value: "Bearer ${AUTH_TOKEN}"
-  - name: "giphy trending"
-    path: "/giphy/trending"
+  - path: "/giphy/trending"
     method: "GET"
     destination:
       url: "https://api.giphy.com/v1/gifs/trending"
@@ -39,8 +36,7 @@ endpoints:
           value: "${GIPHY_API_KEY}"
         - key: "limit"
           value: "1"
-  - name: "spotify artist"
-    path: "/spotify/artist"
+  - path: "/spotify/artist"
     method: "GET"
     destination:
       url: "https://api.spotify.com/v1/artists/4Z8W4fKeB5YxbusRsdQVPb"
