validate endpoint policies to make sure policyDefinition exist for policy

--- a/gateway.yml
+++ b/gateway.yml
@@ -27,6 +27,8 @@ endpoints:
           value: "application/json"
         - key: "Authorization"
           value: "Bearer ${AUTH_TOKEN}"
+    policies:
+      - cors
   - path: "/giphy/trending"
     method: "GET"
     destination:
