--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "test:watch": "turbo run test:watch",
     "lint": "turbo lint",
     "clean": "turbo clean",
-    "prepare": "husky"
+    "prepare": "husky",
+    "purge:node_modules": "rm -rf node_modules && rm -rf packages/*/node_modules"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
