--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -18,7 +18,6 @@
     "@endpointly/utils": "*",
     "ajv": "^8.12.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-rate-limit": "^7.1.5",
     "jwks-rsa": "^3.1.0"
@@ -26,7 +25,6 @@
   "devDependencies": {
     "@endpointly/eslint-config": "*",
     "@endpointly/tsconfig": "*",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21"
+    "@types/cors": "^2.8.17"
   }
 }
