--- a/gateway.yml
+++ b/gateway.yml
@@ -22,6 +22,7 @@ endpoints:
     transformedResponse:
       headers:
         test-header: "test"
+        Cross-Origin-Opener-Policy: ""
     policies:
       - cors
   - path: "/todos"
