--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,7 @@
     "@endpointly/utils": "*",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
+    "helmet": "^7.1.0",
     "http-proxy-middleware": "^2.0.6",
     "yaml": "^2.3.4"
   },
