--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -14,6 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "@endpointly/eslint-config": "*",
-    "@endpointly/tsconfig": "*"
+    "@endpointly/tsconfig": "*",
+    "pino-pretty": "^10.3.1"
+  },
+  "dependencies": {
+    "pino": "^8.19.0"
   }
 }
