--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "turbo build:watch & nodemon packages/server/src/index.ts",
+    "dev": "turbo build:watch & nodemon apps/server/src/index.ts",
     "build": "turbo build",
     "test": "turbo test",
     "test:watch": "turbo run test:watch",
     "lint": "turbo lint",
     "clean": "turbo clean",
     "prepare": "husky",
-    "purge:node_modules": "rm -rf node_modules && rm -rf packages/*/node_modules"
+    "purge:node_modules": "rm -rf node_modules && rm -rf packages/*/node_modules && rm -rf apps/*/node_modules"
   },
   "author": "",
   "license": "ISC",
@@ -36,6 +36,7 @@
     "typescript": "^5.3.3"
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ]
 }
