create start server cli command

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "description": "",
   "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -d",
+    "build:watch": "tsc -w -d",
     "start": "node ./dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
