--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,7 @@
       "outputs": ["dist/**"]
     },
     "build:watch": {
+      "dependsOn": ["^build:watch"],
       "outputs": ["dist/**"]
     },
     "lint": {},
