--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -20,6 +20,7 @@
     "@endpointly/tsconfig": "*"
   },
   "dependencies": {
+    "@endpointly/server": "*",
     "@endpointly/utils": "*",
     "commander": "^12.0.0"
   }
