--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,11 +2,12 @@
   "name": "@endpointly/server",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -d",
-    "build:watch": "tsc -w -d",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "build:watch": "npm run build -- --watch",
     "start": "node ./dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
