--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
     "turbo": "^1.12.4",
     "typescript": "^5.3.3"
   },
