--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@endpointly/policies",
-  "version": "0.0.0",
+  "version": "0.0.7",
   "description": "",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "build:watch": "npm run build -- --watch",
