--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@endpointly/utils",
-  "version": "0.0.7",
+  "version": "0.0.9",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -15,10 +15,10 @@
   "license": "ISC",
   "devDependencies": {
     "@endpointly/eslint-config": "*",
-    "@endpointly/tsconfig": "*",
-    "pino-pretty": "^10.3.1"
+    "@endpointly/tsconfig": "*"
   },
   "dependencies": {
-    "pino": "^8.19.0"
+    "pino": "^8.19.0",
+    "pino-pretty": "^10.3.1"
   }
 }
