--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@endpointly/cli",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "bin": {
-    "endpointly": "dist/src/index.js"
+    "endpointly": "./dist/index.js"
   },
   "scripts": {
-    "build": "tsc -d",
-    "build:watch": "tsc -w -d",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "build:watch": "npm run build -- --watch",
     "lint": "eslint .",
     "clean": "rimraf ./dist"
   },
@@ -20,6 +21,7 @@
     "@endpointly/tsconfig": "*"
   },
   "dependencies": {
+    "@endpointly/server": "*",
     "@endpointly/utils": "*",
     "commander": "^12.0.0"
   }
