--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@endpointly/server",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "",
-  "main": "dist/src/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "build:watch": "npm run build -- --watch",
     "start": "node ./dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
