move tsconfig and eslint config bases to root

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -16,10 +16,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@endpointly/eslint-config": "*",
-    "@endpointly/tsconfig": "*"
-  },
+  "devDependencies": {},
   "dependencies": {
     "@endpointly/server": "*",
     "@endpointly/utils": "*",
