--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,8 +25,5 @@
     "http-proxy-middleware": "^2.0.6",
     "yaml": "^2.3.4"
   },
-  "devDependencies": {
-    "@endpointly/eslint-config": "*",
-    "@endpointly/tsconfig": "*"
-  }
+  "devDependencies": {}
 }
