update jest config

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,10 +9,10 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "build:watch": "npm run build -- --watch",
     "start": "node ./dist/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
     "lint": "eslint .",
-    "clean": "rimraf ./dist"
+    "clean": "rimraf ./dist",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
