--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@endpointly/server",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -9,10 +9,10 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "build:watch": "npm run build -- --watch",
     "start": "node ./dist/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
     "lint": "eslint .",
-    "clean": "rimraf ./dist"
+    "clean": "rimraf ./dist",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -25,8 +25,5 @@
     "http-proxy-middleware": "^2.0.6",
     "yaml": "^2.3.4"
   },
-  "devDependencies": {
-    "@endpointly/eslint-config": "*",
-    "@endpointly/tsconfig": "*"
-  }
+  "devDependencies": {}
 }
