--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@endpointly/cli",
+  "name": "@gateweaver/cli",
   "version": "0.2.4",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "bin": {
-    "endpointly": "./dist/index.js"
+    "gateweaver": "./dist/index.js"
   },
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
@@ -20,8 +20,8 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "@endpointly/server": "*",
-    "@endpointly/utils": "*",
+    "@gateweaver/server": "*",
+    "@gateweaver/utils": "*",
     "commander": "^12.0.0"
   }
 }
