--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@endpointly/server",
+  "name": "@gateweaver/server",
   "version": "0.2.4",
   "description": "",
   "main": "./dist/index.js",
@@ -17,8 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@endpointly/policies": "*",
-    "@endpointly/utils": "*",
+    "@gateweaver/policies": "*",
+    "@gateweaver/utils": "*",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "helmet": "^7.1.0",
