--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,8 +15,8 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "dependencies": {
+    "dotenv": "^16.4.5",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1"
   }
