--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "turbo build:watch & nodemon packages/server/src/server/index.ts",
     "build": "turbo build",
     "build:watch": "turbo build:watch",
@@ -11,7 +12,7 @@
     "lint": "turbo lint",
     "clean": "turbo clean",
     "prepare": "husky",
-    "purge:node_modules": "rm -rf node_modules && rm -rf packages/*/node_modules"
+    "purge:node_modules": "rimraf node_modules packages/*/node_modules"
   },
   "author": "",
   "license": "ISC",
@@ -31,6 +32,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "prettier": "3.2.5",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
