--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -24,6 +24,7 @@
     "jwks-rsa": "^3.1.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21"
   }
 }
