--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,8 +22,12 @@
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "helmet": "^7.1.0",
     "http-proxy-middleware": "^2.0.6",
     "yaml": "^2.3.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
