--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -19,5 +19,8 @@
     "dotenv": "^16.4.5",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
