--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
-    "build:watch": "npm run build -- --watch",
+    "build:watch": "pnpm build --watch",
     "start": "node ./dist/index.js",
     "lint": "eslint .",
     "clean": "rimraf ./dist",
@@ -17,13 +17,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@gateweaver/policies": "*",
-    "@gateweaver/utils": "*",
+    "@gateweaver/policies": "workspace:*",
+    "@gateweaver/utils": "workspace:*",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "helmet": "^7.1.0",
     "http-proxy-middleware": "^2.0.6",
     "yaml": "^2.3.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/express": "^4.17.21"
+  }
 }
