--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,7 +7,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
-    "build:watch": "npm run build -- --watch",
+    "build:watch": "pnpm build --watch",
     "lint": "eslint .",
     "clean": "rimraf ./dist",
     "test": "jest --passWithNoTests",
@@ -15,9 +15,12 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "dependencies": {
+    "dotenv": "^16.4.5",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
