--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,14 +1,24 @@
 {
   "name": "@gateweaver/server",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./start": {
+      "import": "./dist/start-server.mjs",
+      "require": "./dist/start-server.js",
+      "types": "./dist/start-server.d.ts"
+    }
+  },
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "build:watch": "pnpm build --watch",
     "start": "node ./dist/index.js",
+    "build": "tsup",
+    "build:watch": "pnpm build --watch",
     "lint": "eslint .",
     "clean": "rimraf ./dist",
     "test": "jest",
