--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "turbo lint",
     "clean": "turbo clean",
     "prepare": "husky",
-    "purge:node_modules": "rimraf node_modules packages/*/node_modules"
+    "purge:node_modules": "rimraf node_modules packages/*/node_modules",
+    "release": "changeset publish"
   },
   "author": "",
   "license": "ISC",
