--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -41,5 +41,8 @@ jobs:
       - name: Install Dependencies
         uses: ./.github/actions/install
 
+      - name: Build
+        run: pnpm build
+
       - name: Test
         run: pnpm test
