--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,24 +12,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        uses: ./.github/actions/install
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Lint
         run: pnpm lint
-
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Dependencies
-        uses: ./.github/actions/install
-
-      - name: Build
-        run: pnpm build
 
   test:
     name: Test
@@ -38,11 +25,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        uses: ./.github/actions/install
-
-      - name: Build
-        run: pnpm build
+      - name: Setup
+        uses: ./.github/actions/setup
+        with:
+          build: true
 
       - name: Test
         run: pnpm test
