--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        uses: ./.github/actions/install
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
