--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
-      - name: Create Release Pull Request or Publish to npm
+      - name: Create Release Pull Request or Publish packages to npm
         id: changesets
         uses: changesets/action@v1
         with:
