update release action

--- a/.github/actions/publish-image/action.yml
+++ b/.github/actions/publish-image/action.yml
@@ -1,8 +1,14 @@
 name: Publish Server Docker Image
 description: Create and publish Server Docker image
 inputs:
-  version:
-    required: true
+  REGISTRY:
+    description: The registry to push the image to
+    required: false
+    default: ghcr.io
+  IMAGE_NAME:
+    description: The name of the image to push
+    required: false
+    default: gateweaver/server
 
 runs:
   using: "composite"
@@ -17,13 +23,19 @@ runs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Get server package version
+        run: |
+          VERSION=$(jq -r '.version' ./packages/server/package.json)
+          echo "Server package version is $VERSION"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
     - name: Extract metadata (tags, labels) for Docker
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        images: ${{ inputs.REGISTRY }}/${{ inputs.IMAGE_NAME }}
         tags: |
-          type=semver,pattern={{version}},value=${{ inputs.version }}
+          type=semver,pattern={{version}},value=${{ env.VERSION }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
