--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
       contents: write
       issues: write
       pull-requests: write
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,7 +26,7 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
-      - name: Create Release Pull Request or Publish to npm
+      - name: Create Release Pull Request or Publish packages to npm
         id: changesets
         uses: changesets/action@v1
         with:
@@ -35,3 +36,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish Server Docker Image
+        if: steps.changesets.outputs.published == 'true'
+        uses: ./.github/actions/publish-image
