--- a/.github/actions/publish-image/action.yml
+++ b/.github/actions/publish-image/action.yml
@@ -1,12 +1,12 @@
 name: Publish Server Docker Image
 description: Create and publish Server Docker image
 inputs:
+  GITHUB_TOKEN:
+    required: true
   REGISTRY:
-    description: The registry to push the image to
     required: false
     default: ghcr.io
   IMAGE_NAME:
-    description: The name of the image to push
     required: false
     default: gateweaver/server
 
@@ -21,7 +21,7 @@ runs:
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ inputs.GITHUB_TOKEN }}
 
     - name: Get server package version
         run: |
