update publish image action

--- a/.github/actions/publish-image/action.yml
+++ b/.github/actions/publish-image/action.yml
@@ -24,6 +24,7 @@ runs:
         password: ${{ inputs.GITHUB_TOKEN }}
 
     - name: Get server package version
+      shell: bash
       run: |
         VERSION=$(jq -r '.version' ./packages/server/package.json)
         echo "Server package version is $VERSION"
