--- a/.github/actions/publish-image/action.yml
+++ b/.github/actions/publish-image/action.yml
@@ -16,7 +16,7 @@ runs:
     - name: Log in to the Container registry
       uses: docker/login-action@v3
       with:
-        registry: ${{ env.REGISTRY }}
+        registry: ${{ inputs.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ inputs.GITHUB_TOKEN }}
 
