move utils package to server

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,7 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@gateweaver/server": "*",
-    "@gateweaver/utils": "*",
+    "@gateweaver/policies": "*",
     "commander": "^12.0.0",
     "dotenv": "^16.4.5"
   }
