--- a/gateweaver.yml
+++ b/gateweaver.yml
@@ -8,7 +8,7 @@ policyDefinitions:
       - "test-header"
       - "another-header"
   rateLimit:
-    rateLimitBy: "ip"
+    rateLimitBy: "jwt"
   jwt:
     secretOrPublicKey: "${JWT_SECRET}"
     algorithms:
@@ -24,6 +24,7 @@ endpoints:
         test-header: "test"
     policies:
       - cors
+      - rateLimit
   - path: "/todos"
     method: "POST"
     target:
