--- a/gateweaver.yml
+++ b/gateweaver.yml
@@ -8,7 +8,7 @@ policyDefinitions:
       - "test-header"
       - "another-header"
   rateLimit:
-    rateLimitBy: "jwt"
+    rateLimitBy: "ip"
   jwt:
     secretOrPublicKey: "${JWT_SECRET}"
     algorithms:
