--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -39,6 +39,7 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "express-jwt": "^8.4.1"
   }
 }
