Update CLI Commands (#30)
* add validate config commmand

* move files to server utils

* move utils package to server

* update error handler middleware

* add config path to start command

* remove process exit

* move comand

* move action functions to files

* update logger for start action

* update changeset

--- a/gateweaver.yml
+++ b/gateweaver.yml
@@ -24,6 +24,7 @@ endpoints:
         test-header: "test"
     policies:
       - cors
+      - rateLimit
   - path: "/todos"
     method: "POST"
     target:
