--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "ajv-formats": "^2.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-jwt": "^8.4.1",
     "helmet": "^7.1.0",
     "http-proxy-middleware": "^2.0.6",
     "pino": "^8.19.0",
@@ -39,7 +40,6 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "express-jwt": "^8.4.1"
+    "@types/express": "^4.17.21"
   }
 }
